--- a/_posts/2019-12-10-chapitre-1.md
+++ b/_posts/2019-12-10-chapitre-1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Chapitre I. En moi 
+tags: [essai, chapitre, premier]
 ---
 
 Quand j'ai été né, je pouvais sentir la grande force qui m’entoure à ce
