--- a/_posts/2019-12-10-chapitre-1.md
+++ b/_posts/2019-12-10-chapitre-1.md
@@ -1,17 +1,17 @@
 ---
 layout: post
 title: Chapitre I. En moi 
-tags: [essai, chapitre, premier]
+tags: [essai, chapitre, premier, first]
 ---
 
-Quand j'ai été né, je pouvais sentir la grande force qui m’entoure à ce
-moment-là. C’était une chose particulière et invisible qui m’avait envahi.
+Quand j'ai été né, je pouvais sentir la grande force qui m’entourait à ce
+moment-là. C’était une chose particulière et invisible qui m’avait envahie.
 
 Je l’ai fait entrer en moi.<br>
 Je l’ai accepté en moi.<br>
 Je l’ai accueilli amicalement en moi.<br>
 
-Je lui ai salué en lui parlant « Salut, tu es qui ? » « Enchanté. On m’appelle
+Je lui ai salué en disant « Salut, tu es qui ? » « Enchanté. On m’appelle
 Innommé. Je suis venu de la planète qui s’appelle angoisse » a répondu-t-il. Il
 a continué ses paroles sans arrêt. « Tu as entendu parler de cette planète ?
 C’est une planète qui se trouve super loin de la Terre. J’ai passé à peu près
@@ -19,20 +19,19 @@ centaine d’années pour venir te voir. » J’ai dit « Ah bon, pourquoi tu es
 me voir depuis ta planète ? Et aussi, c’est une question bizarre, en tout cas,
 qui suis-je ? Tu le sais ? Je ne me rappelle rien du tout. Je me sens plutôt
 vide comme un grand trou. » Il a posé sa main sur mes épaules en me disant
-comme le suivant. « Oui, c’est normal, tous ceux que tu ressens à ce moment-là.
+comme suivant. « Oui, c’est normal, tous ceux que tu ressens à ce moment-là.
 D’ailleurs, je suis venu te voir pour répondre à tes questions. Tu peux
 m’appeler quand tu veux n’importe quand et n’importe où. Je me trouverai à côté
 de toi quand tu m’appelleras. » Le calme nous entourait. Aucun bruit se coulait
-dehors moi et même en moi. Et là, j’ai trouvé le fait que le son de battement
-de cœur ne s’entend pas du tout. J’étais en moi. Monsieur Innommé n’était pas
-réel. Il est invisible dans le monde. Il n’est qu’une chose constituée des
-molécules introuvables dans le monde. Le coup de foudre s’éclatait en moi.
-Tout de suite, j’ai réalisé l’autre fait qu’il m’a dit qu’il est venu d’une
-autre planète que la Terre parce qu’il n’existe pas dans le monde où je suis
-né. J’ai dit directement à Innommé « Toi, tu n’existes pas dans le réel, c’est
-ça ? » Il a répondu « Ça dépend. Si tu crois à l’existence de moi, j’existe.
-A l’inverse, je n’existe pas. Comme tu l’as juste compris, je me trouve en toi.
-Je te suivrai jusqu’à la mort quel que soit ta décision. En fait, tu n’as pas
-le choix. Je suis avec toi. » L’interrupteur de tremblement a claqué en moi.
-J’ai commencé à me trembler.
-
+en dehors de moi et même en moi. Et là, j’ai trouvé le fait que le son de
+battement de cœur ne s’entendait pas du tout. J’étais en moi. Monsieur Innommé
+n’était pas réel. Il est invisible dans le monde. Il n’est qu’une chose
+constituée des molécules introuvables dans le monde. Le coup de foudre
+s’éclatait en moi. Tout de suite, j’ai réalisé l’autre fait qu’il m’a dit qu’il
+est venu d’une autre planète que la Terre parce qu’il n’existe pas dans le
+monde où je suis né. J’ai dit directement à Innommé « Toi, tu n’existes pas
+dans le réel, c’est ça ? » Il a répondu « Ça dépend. Si tu crois à l’existence
+de moi, j’existe. A l’inverse, je n’existe pas. Comme tu l’as déjà compris, je
+me trouve en toi. Je te suivrai jusqu’à la mort quel que soit ta décision. En
+fait, tu n’as pas le choix. Je suis avec toi. » L’interrupteur de tremblement a
+claqué en moi. J’ai commencé à me trembler.
